# triplet_distance

./: .coverage  .gitignore  LICENSE  README.md  pyproject.toml  tasks.py
results/: create_comp_performance_datasets.py  create_comp_performance_figures.py  create_datasets.py  create_figures.py  create_spr_move_figures.py  get_metric_results.py  network_generators.py
src/rooted_triplet_distance/: __abstract.py  __init__.py
src/rooted_triplet_distance/general_tree/: __general_triplet.py  __init__.py  general_tree.py  general_tree_reconstruction.py
src/rooted_triplet_distance/general_tree/__old/: general_tree_reconstruction_old.py
src/rooted_triplet_distance/level_one_network/: __init__.py  __network_triplet.py  level_one_network.py  level_one_network_reconstruction.py
src/rooted_triplet_distance/multifurcating_tree/: __init__.py  __multifurcating_triplet.py  multifurcating_tree.py  multifurcating_tree_reconstruction.py
src/rooted_triplet_distance/multifurcating_tree/__old/: multifurcating_tree_reconstruction_old.py
tests/: try_out.py
tests/test_general_tree/: test_general_tree.py  test_general_tree_reconstruction.py  test_general_triplet.py  test_random_tree_often.prof  test_random_tree_partial_triplets.prof
tests/test_level_one_network/: conftest.py  test_level_one_network.py  test_level_one_network_reconstruction.py
tests/test_multifurcating_tree/: test_multifurcating_tree.py  test_multifurcating_tree_reconstruction.py  test_multifurcating_triplet.py  test_random_multifurcating_tree_often.prof  test_random_multifurcating_tree_partial_triplets.prof
